<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a303.teachlink.Loging">

    <EditText
        android:id="@+id/ET_Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Username"/>
    <EditText
        android:id="@+id/ET_Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_below="@id/ET_Username"/>
    <Button
        android:id="@+id/BT_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="20dp"
        android:layout_below="@id/ET_Password"
        android:layout_centerHorizontal="true" />
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_below="@id/BT_Login"
        android:src="@drawable/login_img"
        android:layout_margin="32dp"
        android:layout_centerInParent="true"/>


</RelativeLayout>
